# repointel

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/flow-trace/: SKILL.md
.agents/skills/impact-analysis/: SKILL.md
.agents/skills/repo-intel-query/: SKILL.md
.agents/skills/safe-edit-plan/: SKILL.md
.github/workflows/: ci.yml
apps/web/: README.md
apps/web/src/: main.ts
crates/ci-agent/: Cargo.toml
crates/ci-agent/src/: lib.rs
crates/ci-cli/: Cargo.toml
crates/ci-cli/src/: main.rs
crates/ci-cli/tests/: smoke.rs
crates/ci-graph/: Cargo.toml
crates/ci-graph/src/: lib.rs
crates/ci-ir/: Cargo.toml
crates/ci-ir/src/: lib.rs
crates/ci-loader/: Cargo.toml
crates/ci-loader/src/: lib.rs
crates/ci-parser-native/: Cargo.toml
crates/ci-parser-native/src/: lib.rs
crates/ci-parser-web/: Cargo.toml
crates/ci-parser-web/src/: lib.rs
crates/ci-resolver/: Cargo.toml
crates/ci-resolver/src/: lib.rs
crates/ci-search/: Cargo.toml
crates/ci-search/src/: lib.rs
crates/ci-wasm/: Cargo.toml
crates/ci-wasm/src/: lib.rs
docs/: architecture.md  browser-runtime.md  cli-contract.md  codex-integration.md  future-mcp-adapter.md  graph-model.md  indexing-pipeline.md  ir.md  search-and-agent.md
tests/fixtures/sample_repo/scripts/: tasks.py  workers.py
tests/fixtures/sample_repo/src/: auth.rs  db.rs  lib.rs
tests/fixtures/sample_repo/web/: api.ts
tests/fixtures/sample_repo/web/src/: auth_service.ts
