[workspace]
members = [
    "crates/ci-agent",
    "crates/ci-cli",
    "crates/ci-graph",
    "crates/ci-ir",
    "crates/ci-loader",
    "crates/ci-parser-native",
    "crates/ci-parser-web",
    "crates/ci-resolver",
    "crates/ci-search",
    "crates/ci-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["sunhuanyu"]
repository = "https://github.com/example/repointel"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.14"
once_cell = "1.20"
predicates = "3.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3.15"
thiserror = "2.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
