[package]
name = "ci-parser-native"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
ci-ir = { path = "../ci-ir" }
ci-loader = { path = "../ci-loader" }
indexmap.workspace = true
regex.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
