[package]
name = "ci-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ci-agent = { path = "../ci-agent" }
ci-graph = { path = "../ci-graph" }
ci-ir = { path = "../ci-ir" }
ci-loader = { path = "../ci-loader" }
ci-parser-native = { path = "../ci-parser-native" }
